<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewmodel"
            type="com.social.troops.newWork.auth.reset_password.ResetPasswordViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="false"
        android:clickable="true"
        android:focusable="true">

        <View
                android:layout_width="0dp"
                android:layout_height="220dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintHorizontal_bias="0.0"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/const_top"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/const_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{()-> viewmodel.onBackClicked()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/image_back"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/ic_back_arrow_round" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/const_top">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:elevation="5dp"
                    app:cardBackgroundColor="#ffffff"
                    app:cardCornerRadius="14dp"
                    app:layout_constraintBottom_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0"
                    app:layout_constraintVertical_chainStyle="packed">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:paddingStart="12dp"
                        android:paddingTop="18dp"
                        android:paddingEnd="12dp"
                        android:paddingBottom="18dp">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/image_top"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_marginTop="22dp"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:srcCompat="@drawable/password" />

                        <TextView
                            android:id="@+id/text_your_pass"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="22dp"
                            android:text="@string/reset_password"
                            android:textColor="@color/colorPrimary"
                            android:textSize="25sp"
                            app:fontFamily="@font/brandon_med"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/image_top" />

                        <TextView
                            android:id="@+id/text_info"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="15dp"
                            android:text="@string/forgot_pass_info"
                            android:textColor="#818181"
                            android:textSize="16sp"
                            android:visibility="invisible"
                            app:fontFamily="@font/brandon_light"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/text_your_pass" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/input_email"
                            style="@style/TextInputLayoutOne"
                            android:hint="@string/email"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/text_info">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_email"
                                style="@style/TextInputEditTextOne"
                                android:imeOptions="actionNext"
                                android:inputType="textEmailAddress"
                                android:text="@={viewmodel.email}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/input_password"
                            style="@style/TextInputLayoutOne"
                            android:hint="@string/password"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/input_email"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/colorPrimary">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_password"
                                style="@style/TextInputEditTextOne"
                                android:imeOptions="actionNext"
                                android:inputType="textPassword"
                                android:text="@={viewmodel.password}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/input_confirm_password"
                            style="@style/TextInputLayoutOne"
                            android:hint="@string/confirm_password"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/input_password"
                            app:passwordToggleEnabled="true"
                            app:passwordToggleTint="@color/colorPrimary">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/edit_confirm_password"
                                style="@style/TextInputEditTextOne"
                                android:imeOptions="actionGo"
                                android:inputType="textPassword"
                                android:text="@={viewmodel.confirmPassword}" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <androidx.appcompat.widget.AppCompatButton
                            android:id="@+id/button_submit"
                            style="@style/ButtonKimberlyOne"
                            android:layout_marginTop="12dp"
                            android:onClick="@{()-> viewmodel.onSubmitClicked()}"
                            android:text="@string/submit"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/input_confirm_password" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.cardview.widget.CardView>

                <!--<TextView-->
                <!--android:id="@+id/text_dont_have"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="30dp"-->
                <!--android:layout_marginBottom="30dp"-->
                <!--android:fontFamily="@font/montserrat_regular"-->
                <!--android:onClick="@{()-> viewmodel.navigateToLogin()}"-->
                <!--android:paddingTop="10dp"-->
                <!--android:paddingBottom="10dp"-->
                <!--android:text="@string/back_to_login"-->
                <!--android:textColor="@color/colorTextSpeechRed"-->
                <!--android:textSize="15sp"-->
                <!--app:layout_constraintBottom_toBottomOf="parent"-->
                <!--app:layout_constraintEnd_toEndOf="parent"-->
                <!--app:layout_constraintStart_toStartOf="parent"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/card_info" />-->
            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>